# voirc

./: .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  build.sh
.github/workflows/: release.yml
logs/: voirc.log.2026-02-12  voirc.log.2026-02-13  voirc.log.2026-02-18
src/: config.rs  gui.rs  irc_client.rs  irc_server.rs  magic_link.rs  main.rs  moderation.rs  persistence.rs  pow.rs  relay.rs  state.rs  tls.rs  topology.rs  ui.rs  upnp.rs  voice_mixer.rs  webrtc_peer.rs
