[package]
name = "voirc"
version = "0.1.0"
edition = "2021"

[dependencies]
irc = "0.15"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
webrtc = "0.11"
tokio = { version = "1", features = ["full"] }
cpal = "0.15"
ratatui = "0.28"
crossterm = "0.28"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# Added for file logging support
tracing-appender = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
